docs(java/basic/gc): 全面重写垃圾回收机制章节
新增内容：
- 垃圾回收简介（为什么需要 GC、历史演进）
- 对象存活判断（引用计数法、可达性分析）
- 垃圾回收算法（标记 - 清除、标记 - 复制、标记 - 整理、分代收集）
- 垃圾回收器详解（Serial、Parallel、CMS、G1、ZGC）
- GC 日志分析（日志解读、分析工具）
- 内存泄漏排查（常见场景、排查工具、MAT 分析）
- JVM 调优（常用参数、OOM 解决方案、调优案例）
- 6 道练习题（基础 + 进阶）

特色：
- 每行代码都有详细注释
- 20+ 个对比表格
- 30+ 个代码示例
- 算法流程图解
- GC 日志分析示例
- 实战调优案例
- 内存泄漏排查完整教程

字数：约 12,300 字